mon/MgrMonitor: populate on-disk cmd descs if empty on upgrade

During kraken, when we first introduced the mgrs, we wouldn't populate
the on-disk command descriptions on create_initial(). Therefore, if we
are upgrading from a cluster that never had a mgr, we may end up
crashing because we have no cmd descs to load from disk.

Fixes: http://tracker.ceph.com/issues/21300

Signed-off-by: Joao Eduardo Luis <joao@suse.de>
(cherry picked from commit 9ee3f7ad21049d0692804d4405b4bf0f8c795ae3)
Signed-off-by: Joao Eduardo Luis <joao@suse.de>
(cherry picked from commit e271bed9d43d91393a08351001fffe6e3ad84054)